[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hex_utils"
dynamic = ["version", "dependencies"]
requires-python = ">=3.8"
authors = [
  { name="Dong Zhaorui", email="847235539@qq.com" },
]
maintainers = [
  { name="jecjune", email="jecjune@qq.com" },
  { name="Dong Zhaorui", email="847235539@qq.com" },
]
description = "HEXFELLOW Utilities"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache-2.0 license"
]

[tool.setuptools.dynamic]
version = {attr = "hex_utils.__version__"}
dependencies = {file = "requirements.txt"}